# neo4j-python

./: .env  Blocks.csv  EO-Notes.md  Google_ORTools.ipynb  ImportData.ipynb  Pydantic.ipynb  README.md  Rooms.csv  SPINChoice.csv  Teachers.csv  chat.py  javascript.ipynb  langchain.ipynb  main.py  neo4j-to-json.ipynb  neo4j.ipynb  neo4j_EF_Tokyo.ipynb  neo4j_Import_Data.ipynb  pandas.ipynb  pyproject.toml  requirements.txt  vercel.json
DATA/: 2_Weekly_Student_Class.csv  Blocks.csv  ClassType.csv
