[tool.poetry]
name = "neo4j-python"
version = "0.1.0"
description = ""
authors = ["Enio Ohmaye <enio.ohmaye@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
neo4j = "^5.15.0"
python-dateutil = "^2.8.2"
ortools = "^9.8.3296"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
